[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/pixil-frame-7.png" type="Texture" id=1]
[ext_resource path="res://assets/pixil-frame-5.png" type="Texture" id=2]
[ext_resource path="res://assets/pixil-layer-Background (11).png" type="Texture" id=3]
[ext_resource path="res://assets/pixil-layer-Background (12).png" type="Texture" id=4]
[ext_resource path="res://assets/pixil-layer-Background (24) (1).png" type="Texture" id=5]
[ext_resource path="res://assets/pixil-layer-Background (21).png" type="Texture" id=6]
[ext_resource path="res://assets/pixil-layer-Background (30).png" type="Texture" id=7]
[ext_resource path="res://assets/pixil-layer-Background (25).png" type="Texture" id=8]
[ext_resource path="res://assets/pixil-layer-Background (22).png" type="Texture" id=9]
[ext_resource path="res://assets/pixil-layer-Background (28).png" type="Texture" id=10]
[ext_resource path="res://assets/pixil-layer-Background (46).png" type="Texture" id=11]
[ext_resource path="res://assets/pixil-layer-Background (44).png" type="Texture" id=12]
[ext_resource path="res://assets/pixil-layer-Background (48).png" type="Texture" id=13]
[ext_resource path="res://assets/pixil-layer-Background (47).png" type="Texture" id=14]
[ext_resource path="res://assets/pixil-frame-3.png" type="Texture" id=15]
[ext_resource path="res://assets/pixil-frame-0.png" type="Texture" id=16]
[ext_resource path="res://assets/pixil-frame-6.png" type="Texture" id=17]
[ext_resource path="res://assets/pixil-frame-1.png" type="Texture" id=18]
[ext_resource path="res://assets/pixil-frame-2.png" type="Texture" id=19]
[ext_resource path="res://assets/pixil-frame-4.png" type="Texture" id=20]
[ext_resource path="res://cenas_princiapais/weather.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/pixil-layer-Background (39) (1).png" type="Texture" id=22]
[ext_resource path="res://assets/pixil-layer-Background (38).png" type="Texture" id=23]
[ext_resource path="res://Musicas/Kevin MacLeod - Itty Bitty 8 Bit â™« NO COPYRIGHT 8-bit Music (256 kbps)-[AudioTrimmer.com].wav" type="AudioStream" id=24]
[ext_resource path="res://src/script_botoes.gd" type="Script" id=25]
[ext_resource path="res://assets/WhatsApp Image 2023-02-23 at 09.25.28.jpeg" type="Texture" id=26]
[ext_resource path="res://assets/pixil-layer-Background (36).png" type="Texture" id=27]
[ext_resource path="res://Musicas/gentle-rainfall-16960.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/pixil-layer-Background (37).png" type="Texture" id=29]
[ext_resource path="res://fontes/DeterminationMonoWebRegular-Z5oq.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://fontes/PressStart2P-Regular.ttf" type="DynamicFontData" id=31]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fontes/DeterminationMonoWebRegular-Z5oq.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=7]
extra_spacing_char = -1
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 31 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 30 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 25 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512.5, 300.5 )
scale = Vector2( 0.799219, 0.926563 )
texture = ExtResource( 26 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weather" parent="." instance=ExtResource( 21 )]
wind = 0.3
size = 0.6
rain_darkness = 0.07
lightChangeTime = 1.0

[node name="Audio_chuva" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )
autoplay = true

[node name="audio_cutscene" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )

[node name="cutscene1" type="Sprite" parent="."]
position = Vector2( 513, 514 )
texture = ExtResource( 16 )

[node name="cutscene2" type="Sprite" parent="."]
position = Vector2( 513, 514 )
texture = ExtResource( 18 )

[node name="cutscene3" type="Sprite" parent="."]
position = Vector2( 514, 300 )
texture = ExtResource( 19 )

[node name="Choquinho1" type="RichTextLabel" parent="."]
margin_left = 172.0
margin_top = 78.0
margin_right = 364.0
margin_bottom = 150.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )

[node name="Cobrinho1" type="RichTextLabel" parent="."]
margin_left = 393.0
margin_top = 77.0
margin_right = 583.0
margin_bottom = 151.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )

[node name="Fibrinha2" type="RichTextLabel" parent="."]
margin_left = 855.0
margin_top = 171.0
margin_right = 974.0
margin_bottom = 317.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )

[node name="Fibrinha3" type="RichTextLabel" parent="."]
margin_left = 438.0
margin_top = 387.0
margin_right = 688.0
margin_bottom = 446.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )

[node name="cutscene4" type="Sprite" parent="."]
position = Vector2( 514, 300 )
texture = ExtResource( 15 )

[node name="cutscene5" type="Sprite" parent="."]
position = Vector2( 514, 513 )
texture = ExtResource( 20 )

[node name="cutscene6" type="Sprite" parent="."]
position = Vector2( 514, 300 )
texture = ExtResource( 2 )

[node name="Fibrinha4" type="RichTextLabel" parent="."]
margin_left = 263.0
margin_top = 106.0
margin_right = 293.0
margin_bottom = 127.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )

[node name="Cobrinho4" type="RichTextLabel" parent="."]
margin_left = 401.0
margin_top = 51.0
margin_right = 498.0
margin_bottom = 180.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )

[node name="Cobrinho5" type="RichTextLabel" parent="."]
margin_left = 305.0
margin_top = 351.0
margin_right = 454.0
margin_bottom = 410.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )

[node name="Fibrinha6" type="RichTextLabel" parent="."]
margin_left = 805.0
margin_top = 202.0
margin_right = 983.0
margin_bottom = 242.0
custom_colors/default_color = Color( 0.945098, 0.941176, 0.941176, 1 )
custom_fonts/normal_font = SubResource( 9 )

[node name="cutscene7" type="Sprite" parent="."]
position = Vector2( 514, 300 )
texture = ExtResource( 17 )

[node name="cutscene8" type="Sprite" parent="."]
position = Vector2( 514, 300 )
texture = ExtResource( 1 )

[node name="Fibrinha7" type="RichTextLabel" parent="."]
margin_left = 108.0
margin_top = 181.0
margin_right = 161.0
margin_bottom = 215.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 10 )

[node name="Cobrinho8" type="RichTextLabel" parent="."]
margin_left = 758.0
margin_top = 351.0
margin_right = 821.0
margin_bottom = 391.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )

[node name="continue" type="TouchScreenButton" parent="."]
position = Vector2( 906, 532 )
scale = Vector2( 1.3, 1.3 )
normal = ExtResource( 27 )
pressed = ExtResource( 29 )

[node name="back" type="TouchScreenButton" parent="."]
position = Vector2( 15, 532 )
scale = Vector2( 1.3, 1.3 )
normal = ExtResource( 23 )
pressed = ExtResource( 22 )

[node name="Butao_Start" type="TouchScreenButton" parent="."]
position = Vector2( 176, 208 )
scale = Vector2( 1.6, 1.4 )
normal = ExtResource( 14 )
pressed = ExtResource( 13 )

[node name="butao_opcoes" type="TouchScreenButton" parent="."]
position = Vector2( 176, 305 )
scale = Vector2( 1.6, 1.4 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )

[node name="butao_continuar" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 186, 211 )
scale = Vector2( 1.33, 1.33 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="butao_volume" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 181, 398 )
scale = Vector2( 1.33, 1.33 )
normal = ExtResource( 5 )
pressed = ExtResource( 8 )

[node name="butao_codigo_etica" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 187, 301 )
scale = Vector2( 1.33766, 1.44444 )
normal = ExtResource( 9 )
pressed = ExtResource( 6 )

[node name="volume_on" type="Sprite" parent="."]
visible = false
position = Vector2( 463, 438 )
scale = Vector2( 1.24405, 1.44444 )
texture = ExtResource( 7 )

[node name="volume_off" type="Sprite" parent="."]
visible = false
position = Vector2( 463, 438 )
scale = Vector2( 1.24405, 1.44444 )
texture = ExtResource( 10 )

[connection signal="released" from="continue" to="." method="_on_continue_pressed"]
[connection signal="released" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Butao_Start" to="." method="_on_Butao_Start_released"]
[connection signal="released" from="butao_opcoes" to="." method="_on_butao_opcoes_released"]
[connection signal="released" from="butao_continuar" to="." method="_on_butao_continuar_released"]
[connection signal="released" from="butao_volume" to="." method="_on_butao_volume_released"]
[connection signal="released" from="butao_codigo_etica" to="." method="_on_butao_codigo_etica_released"]
